refactored for clarity the method responsible for calculating the deals and added documentation